--- a/QuizSys/.project
+++ b/QuizSys/.project
@@ -1,6 +1,6 @@
 <?xml version="1.0" encoding="UTF-8"?>
 <projectDescription>
-	<name>QuizSystem</name>
+	<name>QuizSys</name>
 	<comment></comment>
 	<projects>
 	</projects>
