--- a/QuizSys/.classpath
+++ b/QuizSys/.classpath
@@ -6,5 +6,6 @@
 	<classpathentry kind="lib" path="C:/SDK/junit-4.11.jar"/>
 	<classpathentry kind="lib" path="C:/SDK/lombok.jar"/>
 	<classpathentry kind="lib" path="C:/SDK/gson-2.2.4.jar"/>
+	<classpathentry kind="lib" path="C:/SDK/mockito-all-1.9.5.jar"/>
 	<classpathentry kind="output" path="bin"/>
 </classpath>
