--- a/QuizSys/.classpath
+++ b/QuizSys/.classpath
@@ -1,11 +1,8 @@
 <?xml version="1.0" encoding="UTF-8"?>
 <classpath>
-	<classpathentry kind="src" path="src"/>
 	<classpathentry kind="con" path="org.eclipse.jdt.launching.JRE_CONTAINER"/>
-	<classpathentry kind="lib" path="C:/Users/Guilherme/git/Quiz/QuizSys/lib/gson.jar"/>
-	<classpathentry kind="lib" path="C:/Users/Guilherme/git/Quiz/QuizSys/lib/hamcrest-core-1.3.jar"/>
-	<classpathentry kind="lib" path="C:/Users/Guilherme/git/Quiz/QuizSys/lib/junit-4.11.jar"/>
-	<classpathentry kind="lib" path="C:/Users/Guilherme/git/Quiz/QuizSys/lib/lombok.jar"/>
-	<classpathentry kind="lib" path="C:/Users/Guilherme/git/Quiz/QuizSys/lib/mockito-all-1.9.5.jar"/>
-	<classpathentry kind="output" path="bin"/>
+	<classpathentry kind="src" path="src"/>
+	<classpathentry kind="con" path="org.eclipse.jdt.USER_LIBRARY/lombok"/>
+	<classpathentry kind="var" path="APPLICATION_HOME_DIR/lib/junit-4.11.jar"/>
+	<classpathentry kind="output" path="out/production/QuizSys"/>
 </classpath>
